--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.jakarta.persistence.validation.mode=none
 
 jwt.secret = "mysupersecretkeymysupersecretkeymysupersecretkey"
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
